# DatastructuresandAlgos

./: Assignment2.h  Assignment_NO_1 DSA.h  BubbleSort.h  CMakeLists.txt  Circularlinkedlist.cpp  Insertion_slot.h  Problems.h  Selectionsort.h  Student.cpp  Student.h  Tree_Traversal.h  aliza_assignment.h  alizalab3q3.h  balanced_parenthesis.h  binary_search_tree.h  counting_sort.h  doctors_room.h  lab09.h  lab11.h  lab3.h  lab4.h  lab5.h  lab6.h  lab7.h  lab8.h  lab_10.h  linkedlists.h  main.cpp  max_heap.h  mergesort.h  prefix-postfix.h  que.h  que_linked_list.h  quicksort.h  recursion_basics.h  shellsort.h  stackwithlinkedlist.cpp  stringreversal.h
