    cmake_minimum_required(VERSION 3.17)
project(DatastructuresandAlgos)

set(CMAKE_CXX_STANDARD 14)

add_executable(DatastructuresandAlgos main.cpp Circularlinkedlist.cpp stackwithlinkedlist.cpp stringreversal.h balanced_parenthesis.h alizalab3q3.h prefix-postfix.h recursion_basics.h Problems.h que.h linkedlists.h lab3.h que_linked_list.h lab4.h "Assignment_NO_1 DSA.h" Selectionsort.h BubbleSort.h lab5.h aliza_assignment.h Insertion_slot.h mergesort.h lab6.h quicksort.h shellsort.h doctors_room.h "counting_sort.h" lab7.h binary_search_tree.h)